bindings/c/whiteout_utils.h

/* SPDX-License-Identifier: BSD-3-Clause */
/* Copyright (c) 2026 Fernando Sahmkow */
/* AUTOGENERATED by tools/codegen/emit_c.py — do not edit. */
/* Regenerate via:  python -m tools.codegen.codegen utils --backend c-header */

#ifndef WHITEOUT_UTILS_H
#define WHITEOUT_UTILS_H

#include "whiteout_c_common.h"

#ifdef __cplusplus
extern "C" {
#endif

/* ── Enums ─────────────────────────────────────────────────── */

typedef enum {
    whiteout_utils_AttributeClass_Position,
    whiteout_utils_AttributeClass_Normal,
    whiteout_utils_AttributeClass_Tangent,
    whiteout_utils_AttributeClass_UV,
    whiteout_utils_AttributeClass_Color,
    whiteout_utils_AttributeClass_BlendIndices,
    whiteout_utils_AttributeClass_BlendWeights,
    whiteout_utils_AttributeClass_Binormal,
    whiteout_utils_AttributeClass_Count,
} whiteout_utils_AttributeClass;

typedef enum {
    whiteout_utils_AttributeEncoding_Float32,
    whiteout_utils_AttributeEncoding_Float16,
    whiteout_utils_AttributeEncoding_SNorm8,
    whiteout_utils_AttributeEncoding_SNorm16,
    whiteout_utils_AttributeEncoding_UNorm8,
    whiteout_utils_AttributeEncoding_UNorm16,
    whiteout_utils_AttributeEncoding_UInt8,
    whiteout_utils_AttributeEncoding_UInt16,
    whiteout_utils_AttributeEncoding_UInt32,
    whiteout_utils_AttributeEncoding_Int8,
    whiteout_utils_AttributeEncoding_Int16,
    whiteout_utils_AttributeEncoding_Int32,
} whiteout_utils_AttributeEncoding;

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_UtilsVertexBuffer whiteout_UtilsVertexBuffer;
typedef struct whiteout_UtilsVertexBufferAttribute whiteout_UtilsVertexBufferAttribute;
typedef struct whiteout_UtilsVertexBufferBuilder whiteout_UtilsVertexBufferBuilder;

/* ── UtilsVertexBuffer ─────────────────────────────────────────────── */

whiteout_UtilsVertexBuffer* whiteout_utils_UtilsVertexBuffer_new(void);
void whiteout_utils_UtilsVertexBuffer_delete(whiteout_UtilsVertexBuffer* self);

/* Get total number of vertices in the buffer */
uint64_t whiteout_utils_UtilsVertexBuffer_vertexCount(const whiteout_UtilsVertexBuffer* self);
/* Get per-vertex byte stride */
uint64_t whiteout_utils_UtilsVertexBuffer_vertexSize(const whiteout_UtilsVertexBuffer* self);
/* Get number of UV layers present */
uint64_t whiteout_utils_UtilsVertexBuffer_UVsNum(const whiteout_UtilsVertexBuffer* self);
/* Check if vertex color data is present */
int32_t whiteout_utils_UtilsVertexBuffer_hasVertexColors(const whiteout_UtilsVertexBuffer* self);
size_t whiteout_utils_UtilsVertexBuffer_get_data_count(const whiteout_UtilsVertexBuffer* self);
void whiteout_utils_UtilsVertexBuffer_resize_data(whiteout_UtilsVertexBuffer* self, size_t count);
const uint8_t* whiteout_utils_UtilsVertexBuffer_get_data_data(const whiteout_UtilsVertexBuffer* self);
void whiteout_utils_UtilsVertexBuffer_assign_data(whiteout_UtilsVertexBuffer* self, const uint8_t* data, size_t count);
size_t whiteout_utils_UtilsVertexBuffer_get_layout_count(const whiteout_UtilsVertexBuffer* self);
void whiteout_utils_UtilsVertexBuffer_resize_layout(whiteout_UtilsVertexBuffer* self, size_t count);
whiteout_UtilsVertexBufferAttribute* whiteout_utils_UtilsVertexBuffer_get_layout_at(whiteout_UtilsVertexBuffer* self, size_t index);
uint32_t whiteout_utils_UtilsVertexBuffer_get_vertex_stride(const whiteout_UtilsVertexBuffer* self);
void whiteout_utils_UtilsVertexBuffer_set_vertex_stride(whiteout_UtilsVertexBuffer* self, uint32_t value);

/* ── UtilsVertexBufferAttribute ─────────────────────────────────────────────── */

whiteout_UtilsVertexBufferAttribute* whiteout_utils_UtilsVertexBufferAttribute_new(void);
void whiteout_utils_UtilsVertexBufferAttribute_delete(whiteout_UtilsVertexBufferAttribute* self);

int32_t whiteout_utils_UtilsVertexBufferAttribute_get_attr_class(const whiteout_UtilsVertexBufferAttribute* self);
void whiteout_utils_UtilsVertexBufferAttribute_set_attr_class(whiteout_UtilsVertexBufferAttribute* self, int32_t value);
int32_t whiteout_utils_UtilsVertexBufferAttribute_get_encoding(const whiteout_UtilsVertexBufferAttribute* self);
void whiteout_utils_UtilsVertexBufferAttribute_set_encoding(whiteout_UtilsVertexBufferAttribute* self, int32_t value);
uint64_t whiteout_utils_UtilsVertexBufferAttribute_get_component_count(const whiteout_UtilsVertexBufferAttribute* self);
void whiteout_utils_UtilsVertexBufferAttribute_set_component_count(whiteout_UtilsVertexBufferAttribute* self, uint64_t value);
uint64_t whiteout_utils_UtilsVertexBufferAttribute_get_offset(const whiteout_UtilsVertexBufferAttribute* self);
void whiteout_utils_UtilsVertexBufferAttribute_set_offset(whiteout_UtilsVertexBufferAttribute* self, uint64_t value);

/* ── UtilsVertexBufferBuilder ─────────────────────────────────────────────── */

whiteout_UtilsVertexBufferBuilder* whiteout_utils_UtilsVertexBufferBuilder_new(void);
void whiteout_utils_UtilsVertexBufferBuilder_delete(whiteout_UtilsVertexBufferBuilder* self);

/* Non-template float-attribute entry point — accepts an already- flattened `f32` array as a `std::span` so the binding layer can aim straight at numpy buffers / `Float32Array` views with no intermediate copy (vertex_count = data.size() / components). */
struct whiteout_UtilsVertexBufferBuilder* whiteout_utils_UtilsVertexBufferBuilder_declareFloatAttribute(whiteout_UtilsVertexBufferBuilder* self, const float* data, size_t data_size, uint64_t components, int32_t attr_class, int32_t encoding, uint64_t align);
/* Non-template integer-attribute entry point — accepts an already- flattened `u32` array. Smaller integer types (u8/u16/i8/i16/i32) are upcast at the call site. `std::span` keeps the boundary zero-copy. */
struct whiteout_UtilsVertexBufferBuilder* whiteout_utils_UtilsVertexBufferBuilder_declareIntAttribute(whiteout_UtilsVertexBufferBuilder* self, const uint32_t* data, size_t data_size, uint64_t components, int32_t attr_class, int32_t encoding, uint64_t align);
/* Build the interleaved vertex buffer from all declared attributes. @param pool  Optional WorkerPool for parallel encoding. When non-null and the vertex count is large enough, the vertex encoding loop is split into cache-friendly chunks across workers. */
struct whiteout_UtilsVertexBuffer* whiteout_utils_UtilsVertexBufferBuilder_build(const whiteout_UtilsVertexBufferBuilder* self, void* pool);


#ifdef __cplusplus
} /* extern "C" */
#endif

#endif /* WHITEOUT_UTILS_H */