bindings/csharp/Whiteout/Utils/NativeMethods.Utils.cs

// SPDX-License-Identifier: BSD-3-Clause
// Copyright (c) 2026 Fernando Sahmkow
// AUTOGENERATED by tools/codegen/emit_csharp.py — DO NOT EDIT.

using System.Runtime.InteropServices;

namespace Whiteout.Utils.Internal;

internal static partial class NativeMethods
{
    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_utils_UtilsVertexBuffer_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_utils_UtilsVertexBuffer_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_utils_UtilsVertexBuffer_get_layout_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_utils_UtilsVertexBuffer_get_layout_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_utils_UtilsVertexBuffer_get_vertex_stride(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_utils_UtilsVertexBuffer_set_vertex_stride(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_utils_UtilsVertexBuffer_vertexCount(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_utils_UtilsVertexBuffer_vertexSize(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_utils_UtilsVertexBuffer_UVsNum(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_utils_UtilsVertexBuffer_hasVertexColors(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_utils_UtilsVertexBufferAttribute_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_utils_UtilsVertexBufferAttribute_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_utils_UtilsVertexBufferAttribute_get_attr_class(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_utils_UtilsVertexBufferAttribute_set_attr_class(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_utils_UtilsVertexBufferAttribute_get_encoding(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_utils_UtilsVertexBufferAttribute_set_encoding(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_utils_UtilsVertexBufferAttribute_get_component_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_utils_UtilsVertexBufferAttribute_set_component_count(IntPtr self, ulong value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_utils_UtilsVertexBufferAttribute_get_offset(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_utils_UtilsVertexBufferAttribute_set_offset(IntPtr self, ulong value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_utils_UtilsVertexBufferBuilder_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_utils_UtilsVertexBufferBuilder_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_utils_UtilsVertexBufferBuilder_build(IntPtr self, IntPtr pool);

}
